Convert multiline `description` strings to text blocks across all API endpoints and DTOs.